feat: add a tagger/push command for pushing to registries

--- a/src/examples/example.yml
+++ b/src/examples/example.yml
@@ -12,8 +12,9 @@ usage:
       steps:
         - tagger/generate_tags
         - tagger/tag:
-            push: true
             source_image: localimage
+            target_image: ghcr.io/org/repo/image
+        - tagger/push:
             target_image: ghcr.io/org/repo/image
 
   workflows:
