--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -39,8 +39,7 @@ jobs:
             while read -r INTAG; do
               docker image ls mydistroless:$INTAG | grep -v REPOSITORY
             done < tags.txt
-      - container-tagger-orb/populate_env_vars:
-          image: gcr.io/distroless/static
+      - container-tagger-orb/populate_tag_env
       - run:
           name: Verify Environment Variables
           command: |
@@ -48,15 +47,31 @@ jobs:
               echo "Expected TAG to be set, but it was not."
               exit 1
             fi
+            echo "The TAG environment variable was set: ${TAG}"
+      - container-tagger-orb/populate_image_uri_env:
+          image: gcr.io/distroless/static
+      - run:
+          name: Verify Environment Variables
+          command: |
             if [[ -z $IMAGE_URI ]]; then
               echo "Expected IMAGE_URI to be set, but it was not."
               exit 1
             fi
-            if [[ -n $IMAGE_URI_DIGEST ]]; then
-              echo "Expected IMAGE_URI_DIGEST to be blank or unset, but it was present."
+            echo "The IMAGE_URI environment variable was set: ${IMAGE_URI}"
+      - run:
+          name: Setup Digest Test
+          command: |
+            echo "export TAG=latest" >> ${BASH_ENV}
+            echo "export IMAGE_URI=gcr.io/distroless/static:latest" >> ${BASH_ENV}
+      - container-tagger-orb/populate_image_uri_digest_env
+      - run:
+          name: Verify Environment Variables
+          command: |
+            if [[ -z $IMAGE_URI_DIGEST ]]; then
+              echo "Expected IMAGE_URI_DIGEST to be set, but it was not."
               exit 1
             fi
-            echo "All environment variables are set correctly."
+            echo "The IMAGE_URI_DIGEST environment variable was set: ${IMAGE_URI_DIGEST}"
 workflows:
   test-deploy:
     jobs:
