fix: pull docker image before computing digest

--- a/src/commands/populate_tag.yml
+++ b/src/commands/populate_tag.yml
@@ -15,4 +15,4 @@ steps:
         PARAM_PACKAGE: << parameters.package >>
         PARAM_TAG_ENV_VAR: << parameters.tag_env_var >>
       name: Populate Tag Environment Variable
-      command: <<include(scripts/populate_tag_env.sh)>>
+      command: <<include(scripts/populate_tag.sh)>>
