--- a/src/commands/populate_tag.yml
+++ b/src/commands/populate_tag.yml
@@ -15,4 +15,5 @@ steps:
         PARAM_PACKAGE: << parameters.package >>
         PARAM_TAG_ENV_VAR: << parameters.tag_env_var >>
       name: Populate Tag Environment Variable
+      shell: /bin/bash
       command: <<include(scripts/populate_tag.sh)>>
