--- a/src/commands/populate_image_uri_digest.yml
+++ b/src/commands/populate_image_uri_digest.yml
@@ -15,4 +15,5 @@ steps:
         PARAM_IMAGE_URI_ENV_VAR: << parameters.image_uri_env_var >>
         PARAM_IMAGE_URI_DIGEST_ENV_VAR: << parameters.image_digest_env_var >>
       name: Populate Image URI Digest Environment Variable
+      shell: /bin/bash
       command: <<include(scripts/populate_image_uri_digest.sh)>>
