fix: small improvements to cci output and logging

--- a/src/commands/tag.yml
+++ b/src/commands/tag.yml
@@ -28,7 +28,6 @@ steps:
   - run:
       environment:
         PARAM_APPEND_TAGS_TO_SOURCE: << parameters.append_tags_to_source >>
-        PARAM_PUSH: << parameters.push >>
         PARAM_SOURCE_IMAGE: << parameters.source_image >>
         PARAM_TAGS_FILE: << parameters.tags_file >>
         PARAM_TARGET_IMAGE: << parameters.target_image >>
@@ -36,3 +35,14 @@ steps:
       name: Apply Tags To Container Image
       shell: /bin/bash
       command: <<include(scripts/tag.sh)>>
+  - when:
+      condition: << parameters.push >>
+      steps:
+        - run:
+            environment:
+              PARAM_TAGS_FILE: << parameters.tags_file >>
+              PARAM_TARGET_IMAGE: << parameters.target_image >>
+              PARAM_TOOL: << parameters.tool >>
+            name: Push Tagged Images To Registry
+            shell: /bin/bash
+            command: <<include(scripts/push.sh)>>
